# smart-home-backend

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  smart-home.spec
.claude/: settings.json
app/: auth.py  config.py  database.py  deps.py  desktop.py  main.py
app/api/: __init__.py  cameras.py  devices.py  members.py  recordings.py  schedules.py  system.py  user.py  ws.py
app/domain/: __init__.py
app/domain/models/: __init__.py  device_online_log.py  member.py  user_settings.py
app/domain/repositories/: __init__.py  camera_repo.py  device_repo.py  recording_repo.py  schedule_repo.py
app/domain/services/: __init__.py  camera_health.py  dlna_service.py  onvif_client.py  presence_domain.py  presence_service.py  (+4 more)
app/infrastructure/: __init__.py
app/models/: __init__.py  camera.py  device.py  device_online_log.py  dlna_device.py  member.py  recording.py  schedule.py  user_settings.py
app/routers/: __init__.py  analytics.py  cameras.py  devices.py  dlna.py  members.py  recordings.py  schedules.py  system.py
app/schemas/: __init__.py  camera.py  device.py  dlna.py  member.py  recording.py  schedule.py  user.py
app/services/: __init__.py  camera_health.py  nas_syncer.py  onvif_client.py  presence_service.py  recorder.py  scanner.py  scheduler_service.py
data/: smart_home.db
tests/: test_a1_presence_recording.py  test_a2_unknown_device.py  test_a3_camera_health.py  test_a4_auto_cast.py  test_analytics.py  test_api.py  test_device_type_detection.py  test_presence_domain.py  test_recording_domain.py  test_scanner.py
(+12 files in other folders)
